[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/chat/Chat.gd" type="Script" id=1]

[node name="Chat" type="Popup"]
margin_left = 214.833
margin_top = 73.0269
margin_right = 814.833
margin_bottom = 523.027
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectBlanco" type="ColorRect" parent="."]
margin_left = 1.88776
margin_right = 601.888
margin_bottom = 450.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectN1" type="ColorRect" parent="."]
margin_left = 19.0
margin_top = 9.0
margin_right = 417.0
margin_bottom = 350.0
color = Color( 0.0509804, 0.0470588, 0.0470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectN2" type="ColorRect" parent="."]
margin_left = 429.0
margin_top = 9.0
margin_right = 590.0
margin_bottom = 347.0
color = Color( 0.0509804, 0.0470588, 0.0470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEditChat" type="LineEdit" parent="."]
margin_left = 21.0
margin_top = 357.0
margin_right = 403.0
margin_bottom = 398.0
text = "Hola
"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTextoChat" type="Button" parent="."]
margin_left = 21.0
margin_top = 403.0
margin_right = 403.0
margin_bottom = 442.0
text = "Mandar texto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 415.0
margin_top = 359.0
margin_right = 584.0
margin_bottom = 442.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextChat" type="RichTextLabel" parent="."]
margin_left = 37.0
margin_top = 29.0
margin_right = 399.0
margin_bottom = 334.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextListaJugadores" type="RichTextLabel" parent="."]
margin_left = 446.0
margin_top = 39.0
margin_right = 573.0
margin_bottom = 324.0
[connection signal="pressed" from="ButtonTextoChat" to="." method="_on_ButtonTextoChat_pressed"]
